--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./resources/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -32,11 +32,25 @@ services:
       - "3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./resources/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./resources/dashboard.yml:/etc/grafana/provisioning/dashboards/dashboard.yml
+      - ./resources/dashboard.json:/etc/grafana/provisioning/dashboards/dashboard.json
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
     depends_on:
       - prometheus
+    networks:
+      - url-shortener-network
+
+  k6:
+    image: grafana/k6:latest
+    container_name: k6
+    ports:
+      - "6565:6565"
+    volumes:
+      - ./resources/k6:/scripts
     networks:
       - url-shortener-network
 
@@ -44,6 +58,7 @@ volumes:
   redis_data:
   prometheus_data:
   grafana_data:
+  k6_data:
 
 networks:
   url-shortener-network:
