--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,17 @@
-# Server Configuration
 SERVER_PORT=8080
 
-# Redis Configuration
+
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-# Application Configuration
+
 BASE_URL=http://url.li
-URL_DURATION=24h 
+URL_DURATION=24h
+
+
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=url_shortener
+POSTGRES_PORT=5432 
