--- a/resources/prometheus.yml
+++ b/resources/prometheus.yml
@@ -5,5 +5,5 @@ global:
 scrape_configs:
   - job_name: 'url-shortener'
     static_configs:
-      - targets: ['url-shortener:8080']
-    metrics_path: '/metrics' 
+      - targets: ['host.docker.internal:8080']
+    metrics_path: '/metrics'
